@@ -1,5 +1,11 @@
 2011-08-24  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in: save & restore CC around setting it for XCC_CREATESHARED
+	Suggested by Eric Blake <eblake@redhat.com>
+	http://article.gmane.org/gmane.comp.shells.bash.bugs:17158
+
+2011-08-24  Sam Steingold  <sds@gnu.org>
+
 	* misc.d (LISP-IMPLEMENTATION-VERSION): add missing GETTEXT calls
 	(MACHINE-TYPE, MACHINE-VERSION): make return value immutable
 	* spvw.d (main): localize the name of the main thread
